# LeviLauncher-Offhand

./: .gitmodules  CMakeLists.txt  README.md  push.sh  xmake.lua
.github/workflows/: build.yml
src/: AssetsFunction.cpp  Item.cpp  ItemRegistry.hpp  ItemRegistryRef.cpp  ItemRegistryRef.hpp  StringHash.hpp  main.cpp
src/features/: Hooks.cpp  Hooks.hpp  Offhand.cpp  Offhand.hpp  RegisterHooks.cpp
src/hooks/: GameModeHooks.cpp  ItemUseInventoryTransactionHooks.cpp
src/util/: Hooks.cpp  Hooks.hpp  HoverRenderer.hpp  InteractionResult.hpp  Item.hpp  ItemRegistry.hpp  ItemRegistryRef.cpp  ItemRegistryRef.hpp  ItemStackBase.h  Logger.cpp  Logger.hpp  MinecraftUIRenderContext.hpp  VanillaItems.hpp
src/util/string/: StringHash.cpp  StringHash.hpp
src/world/: Facing.cpp  Facing.hpp
src/world/gamemode/: GameMode.cpp  GameMode.hpp
src/world/item/: Item.cpp  Item.hpp  ItemStack.cpp  ItemStack.hpp  ItemStackBase.cpp  ItemStackBase.hpp
src/world/level/: BlockPalette.hpp  BlockPos.cpp  BlockPos.hpp  BlockSource.cpp  BlockSource.hpp  ChunkBlockPos.cpp  ChunkBlockPos.hpp  ChunkPos.hpp  DimensionManager.hpp  GameType.hpp  ILevel.hpp  Level.hpp  LevelListener.hpp  LevelSettings.cpp  LevelSettings.hpp  Pos2d.hpp  Spawner.hpp  SubChunkPos.cpp  SubChunkPos.hpp  Tick.hpp
src/world/level/block/: ActorBlock.cpp  ActorBlock.hpp  Block.cpp  Block.hpp  Block.inl  BlockLegacy.cpp  BlockLegacy.hpp  BlockProperty.hpp  BlockState.hpp  FurnaceBlock.hpp  PillarAxis.hpp  VanillaStates.hpp
src/world/level/chunk/: BlockVolume.cpp  BlockVolume.hpp  ChunkSource.cpp  ChunkSource.hpp  ChunkState.hpp  LevelChunk.cpp  LevelChunk.hpp  SubChunk.cpp  SubChunk.hpp
src/world/level/dimension/: Dimension.cpp  Dimension.hpp  DimensionBrightnessRamp.cpp  DimensionFactory.hpp  DimensionHeightRange.hpp  IDimension.hpp  IDimensionFactory.hpp  VanillaDimensions.cpp  VanillaDimensions.hpp
src/world/level/levelgen/: WorldGenerator.cpp  WorldGenerator.hpp
src/world/level/material/: Material.cpp  Material.hpp  (+1 more)
src/world/phys/: AABB.cpp  AABB.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.hpp
(+27 files in other folders)
